RESOLVED FIXED194101
[macOS] Fix scrollbar display for async-scrolling overflow
https://bugs.webkit.org/show_bug.cgi?id=194101
Summary [macOS] Fix scrollbar display for async-scrolling overflow
Simon Fraser (smfr)
Reported 2019-01-31 11:18:42 PST
Scrollbars don't display in async overflow scroll areas on macOS
Attachments
Patch (6.25 KB, patch)
2020-04-10 20:30 PDT, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2019-01-31 11:19:32 PST
Simon Fraser (smfr)
Comment 2 2020-04-10 20:30:56 PDT
EWS
Comment 3 2020-04-10 22:17:29 PDT
Committed r259921: <https://trac.webkit.org/changeset/259921> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396145 [details].
Simon Fraser (smfr)
Comment 4 2020-04-11 08:26:47 PDT
*** Bug 194102 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.