[macOS] Fix scrollbar display for async-scrolling overflow https://bugs.webkit.org/show_bug.cgi?id=194101

Reviewed by Tim Horton.

Source/WebCore:

We need to call positionOverflowControlsLayers() from RenderLayerBacking::updateGeometry(),
otherwise, on first load, scrollbar layers have no size because we try to position them
before we've created them.

Test: fast/scrolling/mac/overflow-scrollbars-should-be-visible.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::positionOverflowControls):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):

LayoutTests:

Mismatch ref test that tests that overlay scrollbars show up.

* fast/scrolling/mac/overflow-scrollbars-should-be-visible-expected-mismatch.html: Added.
* fast/scrolling/mac/overflow-scrollbars-should-be-visible.html: Added.


Canonical link: https://commits.webkit.org/223267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259921 268f45cc-cd09-0410-ab3c-d52691b4dbfc